Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
                 <p>Active beta-branch vs active HA-core differences</p>
                 <ul>
-                        <li><a href='diff.html'>Unified diff core:dev vs beta:master</a></li>
+                        <li><a href='diff.html'>Unified diff core:dev vs beta:main</a></li>
 
                 </ul>
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_core_dev_to_beta.html'>Unified diff core:dev vs beta:core_dev_to_beta</a></li>
+                        <li><a href='diff_* main.html'>Unified diff core:dev vs beta:* main</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
@@ -22,7 +22,7 @@
                 </ul>
 
                 </ul>
-                <p>Various PR branch differences against -beta master (downstreaming/verify)</p>
+                <p>Various PR branch differences against -beta main (downstreaming/verify)</p>
                 <ul>
 
                 </ul>
