Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_* main.html'>Unified diff core:dev vs beta:* main</a></li>
+                        <li><a href='diff_origin/DOMAIN_to_Platform.html'>Unified diff core:dev vs beta:origin/DOMAIN_to_Platform</a></li>
+
+                        <li><a href='diff_origin/USB_energy_refactor.html'>Unified diff core:dev vs beta:origin/USB_energy_refactor</a></li>
+
+                        <li><a href='diff_origin/add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
+
+                        <li><a href='diff_origin/homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
+
+                        <li><a href='diff_origin/main.html'>Unified diff core:dev vs beta:origin/main</a></li>
+
+                        <li><a href='diff_origin/refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
+
+                        <li><a href='diff_origin/usb_tests.html'>Unified diff core:dev vs beta:origin/usb_tests</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
