--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
 
+                        <li><a href='diff_homekit_2.html'>Unified diff core:dev vs beta:origin/homekit_2</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
