Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
+                        <li><a href='diff_more_fixes.html'>Unified diff core:dev vs beta:origin/more_fixes</a></li>
+
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
                         <li><a href='diff_usb_tests.html'>Unified diff core:dev vs beta:origin/usb_tests</a></li>
