Update: main - Diff report completed

--- a/diff_USB_energy_refactor.html
+++ b/diff_USB_energy_refactor.html
@@ -18898,7 +18898,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>16.6</ins>&quot;<ins>]</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>16.8</ins>&quot;<ins>]</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -23375,7 +23375,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    entities: list[PlugwiseSensorEnity] = []</span>
+            <span class="d2h-code-line-ctn">    entities: list[PlugwiseSensorEntity] = []</span>
         </div>
     </td>
 </tr><tr>
@@ -23485,7 +23485,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">                PlugwiseSensorEnity(</span>
+            <span class="d2h-code-line-ctn">                PlugwiseSensorEntity(</span>
         </div>
     </td>
 </tr><tr>
@@ -24024,7 +24024,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>class PlugwiseSensorEnity(PlugwiseEntity, SensorEntity):</ins></span>
+            <span class="d2h-code-line-ctn"><ins>class PlugwiseSensorEntity(PlugwiseEntity, SensorEntity):</ins></span>
         </div>
     </td>
 </tr><tr>
