--- a/diff_refact_usb_for_core_2021_8.html
+++ b/diff_refact_usb_for_core_2021_8.html
@@ -20673,7 +20673,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>16.6</ins>&quot;<ins>]</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>16.8</ins>&quot;<ins>]</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -24506,7 +24506,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    entities<ins>:</ins> <ins>list[PlugwiseSensorEnity] </ins>= []</span>
+            <span class="d2h-code-line-ctn">    entities<ins>:</ins> <ins>list[PlugwiseSensorEntity] </ins>= []</span>
         </div>
     </td>
 </tr><tr>
@@ -24704,7 +24704,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">                <ins>PlugwiseSensorEnity</ins>(</span>
+            <span class="d2h-code-line-ctn">                <ins>PlugwiseSensorEntity</ins>(</span>
         </div>
     </td>
 </tr><tr>
@@ -24847,7 +24847,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">class <ins>PlugwiseSensorEnity</ins>(<ins>PlugwiseEntity</ins>, SensorEntity):</span>
+            <span class="d2h-code-line-ctn">class <ins>PlugwiseSensorEntity</ins>(<ins>PlugwiseEntity</ins>, SensorEntity):</span>
         </div>
     </td>
 </tr><tr>
