--- a/diff_add_typing.html
+++ b/diff_add_typing.html
@@ -18997,7 +18997,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>16.6</ins>&quot;<ins>]</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>16.8</ins>&quot;<ins>]</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -23100,7 +23100,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    entities<ins>:</ins> <ins>list[PlugwiseSensorEnity] </ins>= []</span>
+            <span class="d2h-code-line-ctn">    entities<ins>:</ins> <ins>list[PlugwiseSensorEntity] </ins>= []</span>
         </div>
     </td>
 </tr><tr>
@@ -23210,7 +23210,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>                PlugwiseSensorEnity(</ins></span>
+            <span class="d2h-code-line-ctn"><ins>                PlugwiseSensorEntity(</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -23364,7 +23364,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">class <ins>PlugwiseSensorEnity</ins>(<ins>PlugwiseEntity</ins>, SensorEntity):</span>
+            <span class="d2h-code-line-ctn">class <ins>PlugwiseSensorEntity</ins>(<ins>PlugwiseEntity</ins>, SensorEntity):</span>
         </div>
     </td>
 </tr><tr>
