Update: main - Diff report completed

--- a/diff_regulation_mode.html
+++ b/diff_regulation_mode.html
@@ -12751,7 +12751,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>22</del>.<del>0a1</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>22</del>.<del>0a2</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -12784,7 +12784,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;9a&#x2F;cf&#x2F;58e2e4ccaf714741f992e4e5f1b628bd5fdb32e760249423c935fec38152&#x2F;plugwise-0</del>.<del>17.0a1.tar.gz#plugwise==0.17.0a1</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;67&#x2F;d0&#x2F;ef5f1c82efd0ce545bf3007595ddbbfadb73a5029ffb5cf889004587a6a3&#x2F;plugwise-0</del>.<del>17.0a2.tar.gz#plugwise==0.17.0a2</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
