Update: main - Diff report completed

--- a/diff_regulation_mode.html
+++ b/diff_regulation_mode.html
@@ -13342,7 +13342,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>22</del>.<del>0a7</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>22</del>.<del>0a8</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -13375,7 +13375,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>17</del>.<del>1</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;b3&#x2F;de&#x2F;a17911c09b0988a1113d5bde225c64e0b2fc49b8ac6f8429479690c9d6ae&#x2F;plugwise-0</del>.<del>17.2a0.tar.gz#plugwise==0.17.2a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -13441,7 +13441,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local.</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local</ins>.&quot;],</span>
         </div>
     </td>
 </tr><tr>
