--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_DOMAIN_to_Platform.html'>Unified diff core:dev vs beta:origin/DOMAIN_to_Platform</a></li>
 
+                        <li><a href='diff_HA_consts.html'>Unified diff core:dev vs beta:origin/HA_consts</a></li>
+
                         <li><a href='diff_USB_energy_refactor.html'>Unified diff core:dev vs beta:origin/USB_energy_refactor</a></li>
 
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
@@ -21,6 +23,8 @@
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
+
+                        <li><a href='diff_fix_typing.html'>Unified diff core:dev vs beta:origin/fix_typing</a></li>
 
                         <li><a href='diff_homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
 
