Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
                         <li><a href='diff_DOMAIN_to_Platform.html'>Unified diff core:dev vs beta:origin/DOMAIN_to_Platform</a></li>
 
-                        <li><a href='diff_HA_consts.html'>Unified diff core:dev vs beta:origin/HA_consts</a></li>
-
                         <li><a href='diff_USB_energy_refactor.html'>Unified diff core:dev vs beta:origin/USB_energy_refactor</a></li>
 
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
@@ -33,6 +31,8 @@
                         <li><a href='diff_regulation_mode.html'>Unified diff core:dev vs beta:origin/regulation_mode</a></li>
 
                         <li><a href='diff_select_schedule_fix.html'>Unified diff core:dev vs beta:origin/select_schedule_fix</a></li>
+
+                        <li><a href='diff_upgrade_v17_3.html'>Unified diff core:dev vs beta:origin/upgrade_v17_3</a></li>
 
                         <li><a href='diff_usb_tests.html'>Unified diff core:dev vs beta:origin/usb_tests</a></li>
 
