--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
+                        <li><a href='diff_mypy.html'>Unified diff core:dev vs beta:origin/mypy</a></li>
+
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
                         <li><a href='diff_regulation_mode.html'>Unified diff core:dev vs beta:origin/regulation_mode</a></li>
 
                         <li><a href='diff_select_schedule_fix.html'>Unified diff core:dev vs beta:origin/select_schedule_fix</a></li>
-
-                        <li><a href='diff_upgrade_v17_3.html'>Unified diff core:dev vs beta:origin/upgrade_v17_3</a></li>
 
                         <li><a href='diff_usb_tests.html'>Unified diff core:dev vs beta:origin/usb_tests</a></li>
 
