Update: main - Diff report completed

--- a/diff_extra-filtering.html
+++ b/diff_extra-filtering.html
@@ -84,7 +84,7 @@
       </svg>      <a href="#d2h-097486" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/config_flow.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+5</span>
-          <span class="d2h-lines-deleted">-216</span>
+          <span class="d2h-lines-deleted">-220</span>
       </span>
     </span>
 </li>
@@ -6370,7 +6370,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from datetime import timedelta  # pw-beta</span>
+            <span class="d2h-code-line-ctn">import datetime as dt  # pw-beta</span>
         </div>
     </td>
 </tr><tr>
@@ -7612,36 +7612,25 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">115</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        return await self.<ins>async_step_user</ins>()</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">180</div>
-<div class="line-num2">116</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">181</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    async def <del>async_step_user_usb</del>(</span>
+            <span class="d2h-code-line-ctn">    async def async_step_user_usb(</span>
         </div>
     </td>
 </tr><tr>
@@ -8349,25 +8338,36 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">246</div>
-<div class="line-num2"></div>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">115</div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        return await self.<ins>async_step_user</ins>()</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">246</div>
+<div class="line-num2">116</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">247</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    async def async_step_user_gateway(</span>
+            <span class="d2h-code-line-ctn">    async def <del>async_step_user_gateway</del>(</span>
         </div>
     </td>
 </tr><tr>
@@ -8418,7 +8418,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -277,88 +147,7 @@</div>
+        <div class="d2h-code-line">@@ -277,92 +147,7 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -9143,7 +9143,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        interval = DEFAULT_SCAN_INTERVAL[coordinator.api.smile_type]  # pw-beta</span>
+            <span class="d2h-code-line-ctn">        interval: dt.timedelta = DEFAULT_SCAN_INTERVAL[</span>
         </div>
     </td>
 </tr><tr>
@@ -9154,7 +9154,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">            coordinator.api.smile_type</span>
         </div>
     </td>
 </tr><tr>
@@ -9165,7 +9165,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        data = {</span>
+            <span class="d2h-code-line-ctn">        ]  # pw-beta</span>
         </div>
     </td>
 </tr><tr>
@@ -9176,7 +9176,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            vol.Optional(</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -9187,7 +9187,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                timedelta(seconds=int(CONF_SCAN_INTERVAL)),</span>
+            <span class="d2h-code-line-ctn">        data = {</span>
         </div>
     </td>
 </tr><tr>
@@ -9198,7 +9198,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                default=interval,</span>
+            <span class="d2h-code-line-ctn">            vol.Optional(</span>
         </div>
     </td>
 </tr><tr>
@@ -9209,7 +9209,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            ): timedelta,</span>
+            <span class="d2h-code-line-ctn">                CONF_SCAN_INTERVAL,</span>
         </div>
     </td>
 </tr><tr>
@@ -9220,7 +9220,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        }  # pw-beta</span>
+            <span class="d2h-code-line-ctn">                default=self.config_entry.options.get(</span>
         </div>
     </td>
 </tr><tr>
@@ -9231,7 +9231,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">                    CONF_SCAN_INTERVAL, interval.seconds</span>
         </div>
     </td>
 </tr><tr>
@@ -9242,7 +9242,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if coordinator.api.smile_type != &quot;thermostat&quot;:</span>
+            <span class="d2h-code-line-ctn">                ),</span>
         </div>
     </td>
 </tr><tr>
@@ -9253,7 +9253,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            return self.async_show_form(step_id=&quot;init&quot;, data_schema=vol.Schema(data))</span>
+            <span class="d2h-code-line-ctn">            ): vol.All(cv.positive_int, vol.Clamp(min=10)),</span>
         </div>
     </td>
 </tr><tr>
@@ -9264,7 +9264,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">        }  # pw-beta</span>
         </div>
     </td>
 </tr><tr>
@@ -9275,7 +9275,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        data.update(</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -9286,7 +9286,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            {</span>
+            <span class="d2h-code-line-ctn">        if coordinator.api.smile_type != &quot;thermostat&quot;:</span>
         </div>
     </td>
 </tr><tr>
@@ -9297,7 +9297,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                vol.Optional(</span>
+            <span class="d2h-code-line-ctn">            return self.async_show_form(step_id=&quot;init&quot;, data_schema=vol.Schema(data))</span>
         </div>
     </td>
 </tr><tr>
@@ -9308,7 +9308,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                    CONF_HOMEKIT_EMULATION,</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -9319,7 +9319,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                    default=self.config_entry.options.get(</span>
+            <span class="d2h-code-line-ctn">        data.update(</span>
         </div>
     </td>
 </tr><tr>
@@ -9330,7 +9330,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                        CONF_HOMEKIT_EMULATION, False</span>
+            <span class="d2h-code-line-ctn">            {</span>
         </div>
     </td>
 </tr><tr>
@@ -9341,7 +9341,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                    ),</span>
+            <span class="d2h-code-line-ctn">                vol.Optional(</span>
         </div>
     </td>
 </tr><tr>
@@ -9352,7 +9352,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                ): cv.boolean,</span>
+            <span class="d2h-code-line-ctn">                    CONF_HOMEKIT_EMULATION,</span>
         </div>
     </td>
 </tr><tr>
@@ -9363,7 +9363,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            }</span>
+            <span class="d2h-code-line-ctn">                    default=self.config_entry.options.get(</span>
         </div>
     </td>
 </tr><tr>
@@ -9374,7 +9374,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        )  # pw-beta</span>
+            <span class="d2h-code-line-ctn">                        CONF_HOMEKIT_EMULATION, False</span>
         </div>
     </td>
 </tr><tr>
@@ -9385,12 +9385,56 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">                    ),</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">364</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">                ): cv.boolean,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">365</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            }</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">366</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        )  # pw-beta</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">367</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">368</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -13643,7 +13687,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from datetime import timedelta</span>
+            <span class="d2h-code-line-ctn">import datetime as dt</span>
         </div>
     </td>
 </tr><tr>
@@ -14408,7 +14452,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    update_interval = DEFAULT_SCAN_INTERVAL[api.smile_type]</span>
+            <span class="d2h-code-line-ctn">    update_interval: dt.timedelta = DEFAULT_SCAN_INTERVAL[api.smile_type]</span>
         </div>
     </td>
 </tr><tr>
@@ -14430,7 +14474,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        update_interval = timedelta(seconds=int(custom_time))</span>
+            <span class="d2h-code-line-ctn">        update_interval = dt.timedelta(seconds=int(custom_time))</span>
         </div>
     </td>
 </tr><tr>
@@ -14441,7 +14485,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    LOGGER.debug(&quot;DUC update interval: %s&quot;, update_interval)</span>
+            <span class="d2h-code-line-ctn">    LOGGER.debug(&quot;DUC update interval: %s&quot;, update_interval.seconds)</span>
         </div>
     </td>
 </tr><tr>
