--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
-                        <li><a href='diff_extra-filtering.html'>Unified diff core:dev vs beta:origin/extra-filtering</a></li>
-
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
 
                         <li><a href='diff_homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
+
+                        <li><a href='diff_pw_17_7.html'>Unified diff core:dev vs beta:origin/pw_17_7</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
